--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link type="image/png" sizes="96x96" rel="icon" href="/img/favicons/96x96.png">
     <link type="image/png" sizes="120x120" rel="icon" href="/img/favicons/120x120.png">
 
-    <title>Fast</title>
+    <title>FAST.</title>
 </head>
 
 <body>
@@ -45,7 +45,47 @@
         </header>
         <main class="main">
             <div class="stretched-words">
-                <span>Якщо вам</span> 
+                <span>Якщо вам</span>
+            </div>
+            <div class="container">
+                <div class="benefits-grid">
+                    <div class="s1"><span>треба щоб продавало</span></div>
+                    <div class="s2"><span>треба швиденько</span></div>
+                    <div class="s3"><span>треба класненько</span></div>
+                    <div class="s4"><span>треба шось стильне</span></div>
+                </div>
+            </div>
+            <div class="container-wrapper">
+                <div class="container about-container">
+                    <div class="about-block">
+                        <div class="about-title">то цей<br> сайт<br>
+                            буде</div>
+                        <div class="dividing-line"></div>
+                        <div class="about-description">зроблений якісно і структурно
+                            підключений до систем аналітики
+                            відповідає маркетинговим цілям
+                            продає ваші послуги та продукти</div>
+                    </div>
+                </div>
+            </div>
+            <div class="container portfolio-container">
+                <div class="portfolio-content">
+                    <div class="portfolio-left-column">
+                        <div class="portfolio-plate mojem-plate">
+                            <div class="plate-tag">Можем</div>
+                        </div>
+                        <div class="portfolio-plate sens-visual-plate">
+                            <div class="plate-tag">Сенс візуал</div>
+                        </div>
+                        <div class="portfolio-plate bohlib-plate">
+                            <div class="plate-tag">Бохліб</div>
+                        </div>
+                        <div class="portfolio-plate bigmoney-plate">
+                            <div class="plate-tag">Бігмані</div>
+                        </div>
+                    </div>
+                    <div class="portfolio-right-column"></div>
+                </div>
             </div>
         </main>
         <footer class="footer">
