--- a/index.html
+++ b/index.html
@@ -84,8 +84,28 @@
                             <div class="plate-tag">Бігмані</div>
                         </div>
                     </div>
-                    <div class="portfolio-right-column"></div>
+                    <div class="portfolio-right-column">
+                        <div class="portfolio-title">
+                            <div class="upper-portfolio-title">ось <span>наше портфоліо</span></div>
+                            <div class="lower-portfolio-title">наприклад</div>
+                        </div>
+                        <div class="portfolio-plate gnrtr-plate">
+                            <div class="plate-tag">Генератор</div>
+                        </div>
+                        <div class="portfolio-plate bold-plate">
+                            <div class="plate-tag">Болд маркетинг</div>
+                        </div>
+                        <div class="portfolio-plate profi-plate">
+                            <div class="plate-tag">Профі-центр</div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="container benefits-container">
+                <div class="benefits-title">
+                    Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br> бо ми:
+                </div>
+                <img src="./assets/images/benefits-content.png" class="benefits-content" alt="">
             </div>
         </main>
         <footer class="footer">
