--- a/index.html
+++ b/index.html
@@ -107,6 +107,144 @@
                 </div>
                 <img src="./assets/images/benefits-content.png" class="benefits-content" alt="">
             </div>
+            <div class="container team-container">
+                <div class="team-title">наша <span>крутезна</span><br> команда</div>
+                <div class="team-members">
+                    <div class="team-left-grid">
+                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.png" alt="">
+                            <div class="member-tag">Marketer</div>
+                        </div>
+                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.png" alt="">
+                            <div class="member-tag">Marketer</div>
+                        </div>
+                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png" alt="">
+                            <div class="member-tag">Project manager</div>
+                        </div>
+                        <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png" alt="">
+                        </div>
+                    </div>
+                    <div class="team-right-grid">
+                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.png" alt="">
+                            <div class="member-tag">UI/UX designer</div>
+                        </div>
+                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" alt="">
+                            <div class="member-tag">UI/UX designer</div>
+                        </div>
+                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.png" alt="">
+                            <div class="member-tag">UI/UX designer</div>
+                        </div>
+                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" alt="">
+                            <div class="member-tag">PPC-Specialist</div>
+                        </div>
+                        <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png" alt="">
+                            <div class="member-tag">Front-end Specialist</div>
+                        </div>
+                        <div class="photo-area7 sm-photo"></div>
+                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.png" alt="">
+                            <div class="member-tag">Ідеолог проєкту</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container stages-container">
+                <div class="stages-content">
+                    <div class="stages-title">
+                        чому<br> вам сподобається<br><span>з нами</span> працювати?
+                    </div>
+
+                </div>
+            </div>
+            <div class="stages-accordion">
+                <button class="accordion">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="accordion-title">01. Бріф</div>
+                            <div class="accordion-cross"></div>
+                        </div>
+                    </div>
+                </button>
+                <div class="panel">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="stage-tags">
+                                <div class="tag-title">це робить маркетолог</div>
+                                <div class="tag-date">3-5 днів</div>
+                            </div>
+                            <p>Знайомимось і робимо детальний брифінг, обираємо референси,
+                                але не грузимо вас і йдемо робити блок схему</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="accordion">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="accordion-title">02. Блок-схема</div>
+                            <div class="accordion-cross"></div>
+                        </div>
+                    </div>
+                </button>
+                <div class="panel">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="stage-tags">
+                                <div class="tag-title">маркетолог + дизайнер</div>
+                                <div class="tag-date">2-3 дні</div>
+                            </div>
+                            <p>Показуємо вам блок-схему майбутнього сайту, копірайтинг та візуальні референси. Разом
+                                вносимо правки</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="accordion">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="accordion-title">03. Дизайн</div>
+                            <div class="accordion-cross"></div>
+                        </div>
+                    </div>
+                </button>
+                <div class="panel">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="stage-tags">
+                                <div class="tag-title">це робить дизайнер</div>
+                                <div class="tag-date">5-7 днів</div>
+                            </div>
+                            <p>Показуємо вам готовий дизайн проєкт. Разом з вами вносимо фінальні правки</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="accordion">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="accordion-title">04. Верстка</div>
+                            <div class="accordion-cross"></div>
+                        </div>
+                    </div>
+                </button>
+                <div class="panel">
+                    <div class="container">
+                        <div class="stages-content">
+                            <div class="stage-tags">
+                                <div class="tag-title">фронт-енд + PPC-спец</div>
+                                <div class="tag-date">5-7 днів</div>
+                            </div>
+                            <p>Верстаємо сайт на zero блок, html або react. Підключаємо сервіси аналітики. Здаємо готову
+                                роботу</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container result-container">
+                <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt=""></div>
+                <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt=""></div>
+                <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt=""></div>
+                <div class="right-bottom-corner corners"><img src="./assets/images/CornerBottomRight.png" alt=""></div>
+                <div class="result-content">
+                    <img src="./assets/images/5stage.png" alt="">
+                    <div class="result-title">ви кайфуєте<br> від результату</div>
+                </div>
+            </div>
         </main>
         <footer class="footer">
             <div class="inner-footer"></div>
@@ -114,6 +252,7 @@
     </div>
 
     <script src="./js/main.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
