--- a/index.html
+++ b/index.html
@@ -19,54 +19,56 @@
 
 <body>
     <div class="wrapper">
-        <header class="header container header-container">
-            <div class="header-top-bar">
-                <a href="" class="header-logo">FAST.</a>
-                <nav class="header-nav">
-                    <ul>
-                        <li><a href="">Портфолио</a></li>
-                        <li><a href="">О нас</a></li>
-                        <li><a href="">Контакты</a></li>
-                        <li><a href="">Команда</a></li>
-                        <li><a href="">Процес</a></li>
-                    </ul>
-                    <button class="header-order-btn">
-                        Замовити
-                    </button>
-                    <div class="burger-menu">
-                        <div class="menu-icon">
-                            <span></span>
-                        </div>
-                        <nav class="menu-body">
-                            <nav class="menu-list">
-                                <ul>
-                                    <li class="menu-item">
-                                        <a class="about-btn">про нас</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a class="offices-btn">офіси</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a class="events-btn">івенти</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a class="bistro-btn">бістро</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a class="contacts-btn">контакти</a>
-                                    </li>
-                                </ul>
+        <div class="safe-container">
+            <header class="header container header-container">
+                <div class="header-top-bar">
+                    <a href="" class="header-logo">FAST.</a>
+                    <nav class="header-nav">
+                        <ul>
+                            <li><a href="">Портфолио</a></li>
+                            <li><a href="">О нас</a></li>
+                            <li><a href="">Контакты</a></li>
+                            <li><a href="">Команда</a></li>
+                            <li><a href="">Процес</a></li>
+                        </ul>
+                        <button class="header-order-btn">
+                            Замовити
+                        </button>
+                        <div class="burger-menu">
+                            <div class="menu-icon">
+                                <span></span>
+                            </div>
+                            <nav class="menu-body">
+                                <nav class="menu-list">
+                                    <ul>
+                                        <li class="menu-item">
+                                            <a class="about-btn">про нас</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a class="offices-btn">офіси</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a class="events-btn">івенти</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a class="bistro-btn">бістро</a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a class="contacts-btn">контакти</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </nav>
-                        </nav>
-                    </div>
-                </nav>
-            </div>
-            <div class="header-content">
-                <div class="header-lines">
-                    <h1>твій майбутній сайт<br> розпочнеться <span>тут</span></h1>
+                        </div>
+                    </nav>
                 </div>
-            </div>
-        </header>
+                <div class="header-content">
+                    <div class="header-lines">
+                        <h1>твій майбутній сайт<br> розпочнеться <span>тут</span></h1>
+                    </div>
+                </div>
+            </header>
+        </div>
         <main class="main">
             <div class="stretched-words">
                 <span>Якщо вам</span>
@@ -294,7 +296,7 @@
                 </div>
                 <a class="logo">FAST.</a>
                 <div class="contacts">Контакти:<br>
-                    <span><a href="tel:+380674011151">+380 (67) 40 111 51</a></span>    
+                    <span><a href="tel:+380674011151">+380 (67) 40 111 51</a></span>
                 </div>
             </div>
             <div class="lower-footer-block">
