--- a/index.html
+++ b/index.html
@@ -73,13 +73,16 @@
             <div class="stretched-words">
                 <span>Якщо вам</span>
             </div>
-            <div class="container">
+            <div class="container benefits-grid-container">
+                <div class="benefits-grid-mobile">
+                </div>
                 <div class="benefits-grid">
                     <div class="s1"><span>треба щоб продавало</span></div>
                     <div class="s2"><span>треба швиденько</span></div>
                     <div class="s3"><span>треба класненько</span></div>
                     <div class="s4"><span>треба шось стильне</span></div>
                 </div>
+
             </div>
             <div class="container-wrapper">
                 <div class="container about-container">
@@ -127,13 +130,13 @@
                     </div>
                 </div>
             </div>
-            <div class="container benefits-container">
+            <div style="display:none;" class="container benefits-container">
                 <div class="benefits-title">
                     Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br> бо ми:
                 </div>
                 <img src="./assets/images/benefits-content.png" class="benefits-content" alt="">
             </div>
-            <div class="container team-container">
+            <div style="display:none;" class="container team-container">
                 <div class="team-title">наша <span>крутезна</span><br> команда</div>
                 <div class="team-members">
                     <div class="team-left-grid">
@@ -172,7 +175,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container stages-container">
+            <div style="display:none;" class="container stages-container">
                 <div class="stages-content">
                     <div class="stages-title">
                         чому<br> вам сподобається<br><span>з нами</span> працювати?
@@ -180,7 +183,7 @@
 
                 </div>
             </div>
-            <div class="stages-accordion">
+            <div style="display:none;" class="stages-accordion">
                 <button class="accordion">
                     <div class="container">
                         <div class="stages-content">
@@ -261,7 +264,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container result-container">
+            <div style="display:none;" class="container result-container">
                 <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt=""></div>
                 <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt=""></div>
                 <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt=""></div>
@@ -271,16 +274,16 @@
                     <div class="result-title">ви кайфуєте<br> від результату</div>
                 </div>
             </div>
-            <div class="container order-container">
+            <div style="display:none;" class="container order-container">
                 <div class="order-text">Готовий, унікальний сайт<br><span>за 21 день</span></div>
                 <button class="order-button">Замовити сайт</button>
             </div>
-            <div class="container prices-container">
+            <div style="display:none;" class="container prices-container">
                 <p>Знаємо, що у вас в голові<br> залишилось одне питання:</p>
                 <img class="prices1-image" src="./assets/images/price-image1.png" alt="">
                 <img class="prices2-image" src="./assets/images/price-image2.png" alt="">
             </div>
-            <div class="container form-container">
+            <div style="display:none;" class="container form-container">
                 <div class="form-title">Запис на безкоштовну<br>консультацію</div>
                 <form action="">
                     <input type="text" placeholder="Ім'я" name="name" required>
@@ -289,7 +292,7 @@
                 </form>
             </div>
         </main>
-        <footer class="footer container">
+        <footer class="footer co style=" display:none;"ntainer">
             <div class="upper-footer-block">
                 <div class="telegram">Написати нам:<br>
                     <span><a href="">Telegam</a></span>
