--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                             <div class="lower-portfolio-title">наприклад</div>
                         </div>
                         <div class="portfolio-plate gnrtr-plate">
+                            <img src="./assets/images/gnrtr.png" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
