main page adaptive

--- a/index.html
+++ b/index.html
@@ -101,16 +101,20 @@
                 <div class="portfolio-content">
                     <div class="portfolio-left-column">
                         <div class="portfolio-plate mojem-plate">
+                            <img src="./assets/images/mojem.png" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Можем</div>
                         </div>
                         <div class="portfolio-plate sens-visual-plate">
+                            <img src="./assets/images/sens-visual.png" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Сенс візуал</div>
                         </div>
                         <div class="portfolio-plate bohlib-plate">
+                            <img src="./assets/images/bohlib.png" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Бохліб</div>
                         </div>
                         <div class="portfolio-plate bigmoney-plate">
                             <div class="plate-tag">Бігмані</div>
+                            <img src="./assets/images/bigmoney.png" alt="" class="adaptive-plate-img">
                         </div>
                     </div>
                     <div class="portfolio-right-column">
@@ -123,21 +127,39 @@
                             <div class="plate-tag">Генератор</div>
                         </div>
                         <div class="portfolio-plate bold-plate">
+                            <img src="./assets/images/bold.png" alt="" class="adaptive-plate-img">
                             <div class="plate-tag">Болд маркетинг</div>
                         </div>
                         <div class="portfolio-plate profi-plate">
                             <div class="plate-tag">Профі-центр</div>
+                            <img src="./assets/images/profi.png" alt="" class="adaptive-plate-img">
                         </div>
                     </div>
                 </div>
             </div>
-            <div style="display:none;" class="container benefits-container">
+            <div class="container benefits-container">
                 <div class="benefits-title">
-                    Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br> бо ми:
+                    Ми точно покажемо ваші<br><span>переваги над конкурентами,</span><br class="benefits-title-br"> бо
+                    ми:
                 </div>
                 <img src="./assets/images/benefits-content.png" class="benefits-content" alt="">
+                <ul class="adaptive-benefits-content">
+                    <li>зробимо з вами<br> <span>знайомство-консультацію</span></li>
+                    <li>проведемо <span>аналіз<br> конкурентів</span></li>
+                    <li>підготуємо список <span>переваг</span><br> вашого бізнесу</li>
+                    <li>сформуємо <span>тон оф войс</span><br> вашого сайту</li>
+                    <li>зберемо <span>референси</span></li>
+                    <li>напишемо <span>класні тексти,</span><br> що продають</li>
+                    <li>придумаємо <span>візуальні фічі</span></li>
+                    <li>зробимо ваш сайт<br> <span>унікальним</span></li>
+                </ul>
+                <div class="adaptive-benefits-stars">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
+                    <img src="./assets/images/adaptive-benefits-star.png" alt="">
+                </div>
             </div>
-            <div style="display:none;" class="container team-container">
+            <div class="container team-container">
                 <div class="team-title">наша <span>крутезна</span><br> команда</div>
                 <div class="team-members">
                     <div class="team-left-grid">
@@ -176,7 +198,7 @@
                     </div>
                 </div>
             </div>
-            <div style="display:none;" class="container stages-container">
+            <div class="container stages-container">
                 <div class="stages-content">
                     <div class="stages-title">
                         чому<br> вам сподобається<br><span>з нами</span> працювати?
@@ -184,7 +206,7 @@
 
                 </div>
             </div>
-            <div style="display:none;" class="stages-accordion">
+            <div class="stages-accordion">
                 <button class="accordion">
                     <div class="container">
                         <div class="stages-content">
@@ -265,7 +287,7 @@
                     </div>
                 </div>
             </div>
-            <div style="display:none;" class="container result-container">
+            <div class="container result-container">
                 <div class="left-top-corner corners"><img src="./assets/images/CornerTopLeft.png" alt=""></div>
                 <div class="right-top-corner corners"><img src="./assets/images/CornerTopRight.png" alt=""></div>
                 <div class="left-bottom-corner corners"><img src="./assets/images/CornerBottomLeft.png" alt=""></div>
@@ -275,16 +297,16 @@
                     <div class="result-title">ви кайфуєте<br> від результату</div>
                 </div>
             </div>
-            <div style="display:none;" class="container order-container">
+            <div class="container order-container">
                 <div class="order-text">Готовий, унікальний сайт<br><span>за 21 день</span></div>
                 <button class="order-button">Замовити сайт</button>
             </div>
-            <div style="display:none;" class="container prices-container">
+            <div class="container prices-container">
                 <p>Знаємо, що у вас в голові<br> залишилось одне питання:</p>
                 <img class="prices1-image" src="./assets/images/price-image1.png" alt="">
                 <img class="prices2-image" src="./assets/images/price-image2.png" alt="">
             </div>
-            <div style="display:none;" class="container form-container">
+            <div class="container form-container">
                 <div class="form-title">Запис на безкоштовну<br>консультацію</div>
                 <form action="">
                     <input type="text" placeholder="Ім'я" name="name" required>
@@ -293,7 +315,7 @@
                 </form>
             </div>
         </main>
-        <footer class="footer co style=" display:none;"ntainer">
+        <footer class="footer container footer-container">
             <div class="upper-footer-block">
                 <div class="telegram">Написати нам:<br>
                     <span><a href="">Telegam</a></span>
