--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
             </div>
         </main>
         <footer class="footer container footer-container">
+            <div class="adaptive-footer-logo"><span>
+                    FAST.
+                </span></div>
             <div class="upper-footer-block">
                 <div class="telegram">Написати нам:<br>
                     <span><a href="">Telegam</a></span>
