--- a/index.html
+++ b/index.html
@@ -163,36 +163,55 @@
                 <div class="team-title">наша <span>крутезна</span><br> команда</div>
                 <div class="team-members">
                     <div class="team-left-grid">
-                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.png" alt="">
+                        <div class="photo-area1 sm-photo"><img src="./assets/images/marketer1.png" class="team-l-img"
+                                alt="">
+                            <img src="./assets/images/marketer1-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.png" alt="">
+                        <div class="photo-area2 sm-photo"><img src="./assets/images/marketer2.png" class="team-l-img"
+                                alt="">
+                            <img src="./assets/images/marketer2-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">Marketer</div>
                         </div>
-                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png" alt="">
+                        <div class="single-photo-area l-photo"><img src="./assets/images/project-manager.png"
+                                class="team-l-img" alt="">
+                            <img src="./assets/images/project-manager-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">Project manager</div>
                         </div>
-                        <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png" alt="">
+                        <div class="single-photo-area2 l-photo"><img src="./assets/images/team-img.png"
+                                class="team-l-img" alt="">
                         </div>
                     </div>
                     <div class="team-right-grid">
-                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.png" alt="">
+                        <div class="single-photo-area3 l-photo"><img src="./assets/images/designer1.png"
+                                class="team-l-img" alt="">
+                            <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" alt="">
+                        <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img src="./assets/images/team-img.png"
+                                class="team-l-img" alt="">
+                        </div>
+                        <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" class="team-l-img"
+                                alt="">
+                            <img src="./assets/images/designer3-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.png" alt="">
+                        <div class="photo-area4 sm-photo"><img src="./assets/images/designer3.png" class="team-l-img"
+                                alt="">
+                            <img src="./assets/images/designer2-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" alt="">
+                        <div class="photo-area5 sm-photo"><img src="./assets/images/ppc.png" class="team-l-img" alt="">
+                            <img src="./assets/images/ppc-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">PPC-Specialist</div>
                         </div>
                         <div class="photo-area6 sm-photo"><img src="./assets/images/front-end.png" alt="">
                             <div class="member-tag">Front-end Specialist</div>
                         </div>
                         <div class="photo-area7 sm-photo"></div>
-                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.png" alt="">
+                        <div class="photo-area8 sm-photo"><img src="./assets/images/ideolog.png" class="team-l-img"
+                                alt="">
+                            <img src="./assets/images/ideolog-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">Ідеолог проєкту</div>
                         </div>
                     </div>
