--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <div class="safe-container">
             <header class="header container header-container">
                 <div class="header-top-bar">
-                    <a href="" class="header-logo">FAST.</a>
+                    <a class="header-logo main-btn">FAST.</a>
                     <nav class="header-nav">
                         <ul>
-                            <li><a href="">Портфолио</a></li>
-                            <li><a href="">О нас</a></li>
-                            <li><a href="">Контакты</a></li>
-                            <li><a href="">Команда</a></li>
-                            <li><a href="">Процес</a></li>
+                            <li class="portfolio-btn"><a>Портфолио</a></li>
+                            <li class="about-us-btn"><a>О нас</a></li>
+                            <li class="contacts-btn"><a>Контакты</a></li>
+                            <li class="team-btn"><a>Команда</a></li>
+                            <li class="process-btn"><a>Процес</a></li>
                         </ul>
-                        <button class="header-order-btn">
+                        <button class="header-order-btn order-btn">
                             Замовити
                         </button>
                         <div class="burger-menu">
@@ -41,21 +41,11 @@
                             <nav class="menu-body">
                                 <nav class="menu-list">
                                     <ul>
-                                        <li class="menu-item">
-                                            <a class="about-btn">про нас</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a class="offices-btn">офіси</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a class="events-btn">івенти</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a class="bistro-btn">бістро</a>
-                                        </li>
-                                        <li class="menu-item">
-                                            <a class="contacts-btn">контакти</a>
-                                        </li>
+                                        <li class="menu-item portfolio-btn"><a>Портфолио</a></li>
+                                        <li class="menu-item about-us-btn"><a>О нас</a></li>
+                                        <li class="menu-item contacts-btn"><a>Контакты</a></li>
+                                        <li class="menu-item team-btn"><a>Команда</a></li>
+                                        <li class="menu-item process-btn"><a>Процес</a></li>
                                     </ul>
                                 </nav>
                             </nav>
@@ -188,8 +178,8 @@
                             <img src="./assets/images/designer1-mobile.png" class="team-s-img" alt="">
                             <div class="member-tag">UI/UX designer</div>
                         </div>
-                        <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img src="./assets/images/team-img.png"
-                                class="team-l-img" alt="">
+                        <div class="single-photo-area2 single-photo-area2-mobile l-photo"><img
+                                src="./assets/images/team-img.png" class="team-l-img" alt="">
                         </div>
                         <div class="photo-area3 sm-photo"><img src="./assets/images/designer2.png" class="team-l-img"
                                 alt="">
